# Termosaic

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/termosaic/: __init__.py  cli.py  render.py  video.py
