[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "termosaic"
version = "0.1.0"
description = "Render images, GIFs, and videos as true-color mosaic blocks in a terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=10"]

[project.scripts]
termosaic = "termosaic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
